   - Unsettled page: have all account/entry related actions.
   - VAT records: may now display the generated operations (todo #1296).
   - VAT records: are automatically validated on period/exercice close (todo #1435).
   - VAT records: cannot anymore be validated from the properties, but only from the page.
   - VAT records: let the accounting entries to be deleted.

 Bug fixes:

   - Exercice closing: forward operation number are generated in the new exercice.
   - Exercice closing: rightly store last closing date and last entry number.
   - myICollectionable: make sure the dataset is loaded before first insertion.
   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaLedgerClose: display the columns in ledgers treeview (todo #1438).
   - ofaLedgerClose: fix signaler handlers GList management.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.
   - ofaReconcilGroup: conciliation update label is insensitive (todo #1432).
   - ofaReconcilRender: compute the account solde depending of the requested date (todo #1413).
   - ofaRecurrentRunPage: renew the actions state after an operation.
   - Printings: identifiers are ellipsized if too large (todo #1150).
   - Printings: display the dossier label instead of the meta name (todo #1415).

 Other changes:

   - maintainer/check-po.sh: check that all files are rightly internationalized (todo #1421). 
   - Clarify the reference management of the collection (todo #1359).
   - myICollector: load_collection() always returns a new sTyped structure.
   - ofaAccentryStore: new class.
   - ofaAccentryTreeview: new class.
   - ofaBatLineProperties: new class.
   - ofaIRenderer: new interface.